--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,14 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>Simulator</name>
     <description>Simulator</description>
+    <packaging>pom</packaging>
     <properties>
         <java.version>17</java.version>
     </properties>
+    <modules>
+        <module>App</module>
+        <module>Server</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
